// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async function's time traveling 1`] = `
[
  [
    "I",
    0,
    0,
  ],
  [
    "CHECKPOINT - 1",
  ],
  [
    "J",
    0,
    100,
  ],
  [
    "I",
    1,
    100,
  ],
  [
    "A:R1",
    100,
    0,
  ],
  [
    "CHECKPOINT - 2",
  ],
  [
    "J",
    1,
    300,
  ],
  [
    "I",
    2,
    300,
  ],
  [
    "A:R2",
    300,
    300,
  ],
  [
    "CHECKPOINT - 3",
  ],
  [
    "J",
    2,
    600,
  ],
  [
    "EXIT:",
    600,
  ],
  [
    "A:R3",
    600,
    1200,
  ],
  [
    "UNDO 1",
  ],
  [
    "CHECKPOINT - 3/2",
  ],
  [
    "J",
    2,
    601,
  ],
  [
    "EXIT:",
    601,
  ],
  [
    "A:R3/1",
    601,
    1202,
  ],
  [
    "UNDO 2",
  ],
  [
    "CHECKPOINT/3",
  ],
  [
    "CONT 2",
    undefined,
  ],
  [
    "CHECKPOINT - 3/3",
  ],
  [
    "J",
    1,
    402,
  ],
  [
    "I",
    2,
    402,
  ],
  [
    "A:R3/2",
    402,
    402,
  ],
  [
    "UNDO3",
  ],
  [
    "CHECKPOINT - 3/3",
  ],
  [
    "J",
    2,
    705,
  ],
  [
    "EXIT:",
    705,
  ],
  [
    "A:R3/3",
    705,
    1410,
  ],
  [
    "UNDO4",
  ],
  [
    "CHECKPOINT - 3/4",
  ],
  [
    "J",
    2,
    706,
  ],
  [
    "EXIT:",
    706,
  ],
  [
    "A:R3/4",
    706,
    1412,
  ],
  [
    "UNDO5",
  ],
  [
    "WRITE",
  ],
  [
    "CHECKPOINT - 3/5",
  ],
  [
    "J",
    2,
    707,
  ],
  [
    "EXIT:",
    707,
  ],
  [
    "A:R3/5",
    707,
    1414,
  ],
  [
    "UNDO 6",
  ],
  [
    "CHECKPOINT - 3/6",
  ],
  [
    "J",
    2,
    708,
  ],
  [
    "EXIT:",
    708,
  ],
  [
    "A:R3/6",
    708,
    1416,
  ],
  [
    "UNDO 7",
  ],
  [
    "CHECKPOINT - 3/7",
  ],
  [
    "J",
    2,
    709,
  ],
  [
    "EXIT:",
    709,
  ],
  [
    "A:R3/7",
    709,
    1418,
  ],
]
`;

exports[`async generator functions time traveling 1`] = `
[
  [
    "I",
    0,
    0,
  ],
  [
    "CHECKPOINT - 1",
  ],
  [
    "K",
    100,
    100,
  ],
  [
    "J",
    0,
    100,
  ],
  [
    "I",
    1,
    100,
  ],
  [
    "A:R1",
    100,
    0,
  ],
  [
    "CHECKPOINT - 2",
  ],
  [
    "K",
    300,
    300,
  ],
  [
    "J",
    1,
    300,
  ],
  [
    "I",
    2,
    300,
  ],
  [
    "A:R2",
    300,
    300,
  ],
  [
    "CHECKPOINT - 3",
  ],
  [
    "K",
    600,
    600,
  ],
  [
    "J",
    2,
    600,
  ],
  [
    "EXIT:",
    600,
  ],
  [
    "A:R3",
    600,
    1200,
  ],
  [
    "UNDO 1",
  ],
  [
    "CHECKPOINT - 3/2",
  ],
  [
    "K",
    601,
    601,
  ],
  [
    "J",
    2,
    601,
  ],
  [
    "EXIT:",
    601,
  ],
  [
    "A:R3/1",
    601,
    1202,
  ],
  [
    "UNDO 2",
  ],
  [
    "CHECKPOINT/3",
  ],
  [
    "CONT 2",
    undefined,
  ],
  [
    "CHECKPOINT - 3/3",
  ],
  [
    "K",
    402,
    402,
  ],
  [
    "J",
    1,
    402,
  ],
  [
    "I",
    2,
    402,
  ],
  [
    "A:R3/2",
    402,
    402,
  ],
  [
    "UNDO3",
  ],
  [
    "CHECKPOINT - 3/3",
  ],
  [
    "K",
    705,
    705,
  ],
  [
    "J",
    2,
    705,
  ],
  [
    "EXIT:",
    705,
  ],
  [
    "A:R3/3",
    705,
    1410,
  ],
  [
    "UNDO4",
  ],
  [
    "CHECKPOINT - 3/4",
  ],
  [
    "K",
    706,
    706,
  ],
  [
    "J",
    2,
    706,
  ],
  [
    "EXIT:",
    706,
  ],
  [
    "A:R3/4",
    706,
    1412,
  ],
  [
    "UNDO5",
  ],
  [
    "WRITE",
  ],
  [
    "CHECKPOINT - 3/5",
  ],
  [
    "K",
    707,
    707,
  ],
  [
    "J",
    2,
    707,
  ],
  [
    "EXIT:",
    707,
  ],
  [
    "A:R3/5",
    707,
    1414,
  ],
  [
    "UNDO 6",
  ],
  [
    "CHECKPOINT - 3/6",
  ],
  [
    "K",
    708,
    708,
  ],
  [
    "J",
    2,
    708,
  ],
  [
    "EXIT:",
    708,
  ],
  [
    "A:R3/6",
    708,
    1416,
  ],
  [
    "UNDO 7",
  ],
  [
    "CHECKPOINT - 3/7",
  ],
  [
    "K",
    709,
    709,
  ],
  [
    "J",
    2,
    709,
  ],
  [
    "EXIT:",
    709,
  ],
  [
    "A:R3/7",
    709,
    1418,
  ],
]
`;

exports[`pure generator functions time traveling 1`] = `
[
  [
    "I",
    0,
    0,
  ],
  [
    "C",
    1,
    0,
  ],
  [
    "I",
    1,
    1,
  ],
  [
    "C",
    3,
    1,
  ],
  [
    "I",
    2,
    3,
  ],
  [
    "C",
    10,
    6,
  ],
  [
    "DONE 1",
    10,
  ],
  [
    "DONE 2",
    {
      "done": true,
      "value": undefined,
    },
  ],
  [
    "DONE 3",
    {
      "done": true,
      "value": undefined,
    },
  ],
  [
    "DONE 4",
    undefined,
  ],
  [
    "DONE 5",
    undefined,
  ],
]
`;
